# solubility-predictor

./: .gitignore  Dockerfile  README.md  analyze_model.py  docker-compose.yml  fix_imports.py  inference.py  pyproject.toml  repomix-output.xml  requirements-core.txt  requirements-ml.txt  requirements.txt  run_train.py  setup_colab.py  test_api.py
analysis_results/: atom_importance.csv  error_analysis.csv  molecule_embeddings.csv
api/: README.md  config.py  main.py  service.py  utils.py  validation.py
data/models/: best_model.pth
data/raw/: solubility_dataset.csv
models/: best_model.pth  gnn_model.py
notebooks/: solubility_prediction_colab.ipynb
src/: train.py
src/data/: dataset.py  molecule_graph.py  test_graph.py
src/solpred/: train.py
src/solpred/data/: explore.py  molecule_graph.py
